<resources>
    <string name="app_name">MyDemo</string>
    <string name="animation">animation</string>
    <string name="AIDL">AIDL</string>
    <string name="animation_start">启动动画</string>
    <string name="animation_start_time">王者荣耀点击效果</string>
    <string name="Service">Service</string>
    <string name="retrofit2">retrofit2</string>
    <string name="start_service">start_service</string>
    <string name="stop_service">stop_service</string>
    <string name="bind_service">bind_service</string>
    <string name="unbind_service">unbind_service</string>
    <string name="start_intentservice">start_intentservice</string>
    <string name="Query_weather">网络请求 默认被他人登陆</string>
    <string name="other_load">其他人登陆</string>
    <string name="system_maintain">系统维护</string>
    <string name="Mvvm">Mvvm</string>
    <string name="Mvp">Mvp</string>
    <string name="Push">Push</string>
    <string name="permissions">permissions</string>
    <string name="call">Call</string>
    <string name="手势分发">手势分发</string>
    <string name="isBeing">isBeing</string>
    <string name="Toast">Toast</string>
    <string name="Album">Album</string>
    <string name="Webview">Webview</string>
    <string name="VR">VR全景</string>
    <string name="Thread">Thread Stop</string>
    <string name="BackLinear">BackLinear</string>
    <string name="myMap">自定义区域搜索</string>
    <string name="Electrocardiogram">心电图</string>
    <string name="redbag">红包雨</string>
    <string name="fuzzy">模糊图</string>
    <string name="poppay">poppay</string>
    <string name="surfaceView">surfaceView</string>
    <string name="camera">相机</string>
    <string name="adaptation">适配问题</string>
    <string name="memory">消除内存</string>
    <string name="TodayNewsAct">今日头条</string>
    <string name="magnifying_glass">放大镜效果</string>
    <string name="video_Player">视频播放器</string>
    <string name="quick_adapter">quick_adapter</string>
    <string name="RouterAct">RouterAct</string>
    <string name="LinearGradientAct">文字渐变</string>
    <string name="SeaAct">SeaAct</string>
    <string name="location">location</string>
    <string name="RxJava">RxJava</string>
    <string name="RxPermissions">RxPermissions</string>
    <string name="RongYunAct">RongYunAct</string>

</resources>
