<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/start_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_service" />

    <Button
        android:id="@+id/stop_servie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_service" />

    <Button
        android:id="@+id/bind_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bind_service" />

    <Button
        android:id="@+id/unbind_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unbind_service" />

    <Button
        android:id="@+id/start_intentservice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_intentservice" />
    <Button
        android:id="@+id/do_someting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="做事情" />
    <Button
        android:id="@+id/open_something"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="打开文件" />


</LinearLayout>